feat: improve ingest reliability
- Redis Streams: retry/backoff, PEL reclaim, DLQ, metrics, idempotent transitions

- Kafka outbox: due-scan, backoff retry, DEAD handling, metrics

- Add Flyway migrations, docs, and tests